# ha-synology-tasks

./: README.md  pyproject.toml
.github/workflows/: lint.yml
custom_components/synology_tasks/: button.py  const.py  manifest.json  sensor.py  synology.py
scripts/: test_dsm_api.sh
