[project]
name = "hacs-synology-tasks"
version = "0.1.1"
description = ""
authors = [
    {name = "bckr",email = "bri@bckr.io"}
]
readme = "README.md"
requires-python = ">=3.13.2,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "homeassistant (>=2025.8.3,<2026.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
